# InsidersReviewsOnMap

./: .gitignore  README.md  pyproject.toml
src/config/: settings.py  urls.py
src/core/: filters.py  models.py  serializers.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_review.py  0003_reviewlike.py  0004_location_is_active_alter_reviewlike_review.py  0005_alter_location_category_delete_category.py
